--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin-Recipes</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <a href="/recipes/lasagna.html"><h3>Lasagna</h3></a>
-    
-</body>
+  </head>
+  <body>
+    <h1>Odin Recipes:</h1>
+    <ul>
+      <li>
+        <a href="/recipes/lasagna.html"><h3>Lasagna</h3></a>
+      </li>
+      <li>
+        <a href="/recipes/lasagna2.html"><h3>Lasagna2</h3></a>
+      </li>
+      <li>
+        <a href="/recipes/lasagna3.html"><h3>Lasagna3</h3></a>
+      </li>
+    </ul>
+  </body>
 </html>
