--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Odin Recipes:</h1>
     <ul>
       <li>
-        <a href="/recipes/lasagna.html"><h3>Lasagna</h3></a>
+        <a href="/odin-recipes/recipes/lasagna.html"><h3>Lasagna</h3></a>
       </li>
       <li>
-        <a href="/recipes/lasagna2.html"><h3>Lasagna2</h3></a>
+        <a href="/odin-recipes/recipes/lasagna2.html"><h3>Lasagna2</h3></a>
       </li>
       <li>
-        <a href="/recipes/lasagna3.html"><h3>Lasagna3</h3></a>
+        <a href="/odin-recipes/recipes/lasagna3.html"><h3>Lasagna3</h3></a>
       </li>
     </ul>
   </body>
