--- a/recipes/lasagna3.html
+++ b/recipes/lasagna3.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>lasagna</title>
+    <title>lasagna3</title>
+    <style>
+      body {
+        background-color: antiquewhite;
+      }
+      h1,
+      h2,
+      h3 {
+        margin: 3rem;
+        font-size: xxx-large;
+        font-family: "Courier New", Courier, monospace;
+      }
+      img {
+        width: 25rem;
+        height: auto;
+        border-radius: 20px;
+        filter: contrast(1.8);
+      }
+
+      .container {
+        display: flex;
+        font-size: 18px;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+    </style>
   </head>
   <body>
-    <h1>lasagna</h1>
-    <img
+    <h1>Lasagna3</h1>
+    <hr style="margin-bottom: 3rem;"/>
+    <div class="container">
+      <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7250725.jpg&w=767&h=767&c=sc&poi=face&q=85"
     />
     <h1>Description</h1>
@@ -42,5 +70,6 @@
         Step 4 Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.
       </li>
     </ol>
+    </div>
   </body>
 </html>
